Bug 351309 - kio-fish doesn't delete files
Summary: kio-fish doesn't delete files
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: default (other bugs)
Version First Reported In: 5.3.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
: 353431 357632 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-14 20:48 UTC by Antonio Rojas
Modified: 2016-01-13 12:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2015-08-14 20:48:21 UTC
It's not posible to delete files in fish remote folders. The delete operation pretends to complete succesfully, the files are removed from the view, but after refreshing they are still there.

Reproducible: Always

Steps to Reproduce:
1. Connect to a remote folder in dolphin via fish
2. Delete a file

Actual Results:  
The file seems to be deleted, but after refreshing the view it reappears

Expected Results:  
The file is deleted
Comment 1 Emmanuel Pescosta 2015-10-02 10:40:09 UTC
*** Bug 353431 has been marked as a duplicate of this bug. ***
Comment 2 David Edmundson 2015-10-02 21:09:33 UTC
Git commit 311f7e124e49b81a37fd49b3ef20e9ca65c8567a by David Edmundson.
Committed on 02/10/2015 at 21:09.
Pushed by davidedmundson into branch 'Applications/15.08'.

Fix delete in Fish protocol

>From 1b83492516b3eed9db00d2de488220ab637ada17

porting from KUrl to QUrl was made as:
-    if (!url.hasPath()) {
+    if (!url.path().isEmpty()) {

which is obviously wrong

M  +1    -1    fish/fish.cpp

http://commits.kde.org/kio-extras/311f7e124e49b81a37fd49b3ef20e9ca65c8567a
Comment 3 Emmanuel Pescosta 2016-01-13 11:52:07 UTC
*** Bug 357632 has been marked as a duplicate of this bug. ***
Comment 4 Victor B. Gonzalez 2016-01-13 12:28:11 UTC
(In reply to David Edmundson from comment #2)
> Git commit 311f7e124e49b81a37fd49b3ef20e9ca65c8567a by David Edmundson.
> Committed on 02/10/2015 at 21:09.
> Pushed by davidedmundson into branch 'Applications/15.08'.
> 
> Fix delete in Fish protocol
> 
> >From 1b83492516b3eed9db00d2de488220ab637ada17
> 
> porting from KUrl to QUrl was made as:
> -    if (!url.hasPath()) {
> +    if (!url.path().isEmpty()) {
> 
> which is obviously wrong
> 
> M  +1    -1    fish/fish.cpp
> 
> http://commits.kde.org/kio-extras/311f7e124e49b81a37fd49b3ef20e9ca65c8567a

I have the following, Plasma version 5.5.3, Qt 5.6.0, Kernel 4.3.3-300 and this dolphin issue still exist. What version of what product will this be addressed?
Comment 5 Antonio Rojas 2016-01-13 12:30:57 UTC
Fix is in KDE Applications 15.08.2, released 3 months ago.
Comment 6 Victor B. Gonzalez 2016-01-13 12:55:31 UTC
(In reply to Antonio Rojas from comment #5)
> Fix is in KDE Applications 15.08.2, released 3 months ago.

It seems even with the latest Fedora updates, I'm still at 15.08.1. So, I'm .1 short of the fix. Thanks for clearing it up :)