Fix delete in Fish protocol

From 1b83492516b3eed9db00d2de488220ab637ada17

porting from KUrl to QUrl was made as:
-    if (!url.hasPath()) {
+    if (!url.path().isEmpty()) {

which is obviously wrong

BUG: 351309